--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "questionmark",
   "version": "0.0.0",
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
